Fix questions spacing

--- a/main.css
+++ b/main.css
@@ -207,10 +207,7 @@ a {
   font-size: 1.4rem;
   max-width: 1000px;
   margin: 0 auto;
-}
-
-.questions-list {
-  margin: 4rem 2rem;
+  padding: 4rem 2rem;
 }
 
 .questions-q {
